--- a/mobile.css
+++ b/mobile.css
@@ -1,5 +1,5 @@
 body,html {
-    font-size: 3vw;
+    font-size: 0.5vh;
     font-family: 'Raleway', sans-serif;
     margin: 0;
     margin-right: 0.2rem;
@@ -24,6 +24,7 @@ body,html {
 .banner-text {
     text-align: center;
     position: absolute;
+    width: 75%;
     font-size: 2vh;
     top: 50%;
     left: 50%;
@@ -31,13 +32,21 @@ body,html {
     color: white;
     z-index: 0;
 }
+#myName {
+    font-size: 8rem;
+    margin-top: 0rem;
+}
+#headline {
+    margin-top: -4rem;
+    font-size: 5rem;
+}
 .baricon {
+    display: inline-block;
     padding-right: 1.5rem;
     padding-left: 1.5rem;
     margin: 0;
 }
-#iListTitle {
-    padding-top: 1rem; 
+#iListTitle { 
     margin-bottom: 0rem; 
     color: white; 
     font-size: 4.5vh;
@@ -48,7 +57,7 @@ body,html {
 .iconlist {
     margin-top: -1.5rem;
     background-color: #3D9970;
-    height: 42.5vh;
+    height: 46vh;
     width: 100%;
     border: none;
     padding-bottom: 3rem;
@@ -61,17 +70,17 @@ body,html {
     opacity: 0;
     transform: scale(0);
     position: fixed;
-    bottom: 2rem;
-    right: 2rem;
+    bottom: 5rem;
+    right: 5rem;
     z-index: 99;
     border: none;
     outline: none;
     background-color: #FF4136;
     color: white;
     cursor: pointer;
-    padding: 1rem;
+    padding: 3rem;
     border-radius: 1rem;
-    font-size: 3rem;
+    font-size: 10rem;
 }
 .icon {
     height: 8vh;
@@ -80,24 +89,31 @@ body,html {
     border: none;
 }
 .minicon {
-    height: 1rem;
-    width: 1rem;
+    height: 7rem;
+    width: 7rem;
+    padding-right: 5rem;
     border:none;
 }
-#resume {
-    position: absolute;
-    left: 2rem;
-    top: 1.5rem;
-    height: 3rem;
-}
-#contactinfo {
-    position: absolute;
-    left: 14rem;
-    top: 1.5rem;
-    height: 3rem;
+#resume, #contactinfo {
+    display: none;
 }
 .githlink {
-    height: 1.2rem;
+    height: 11.7rem;
+    border-width: 0.7rem;
+    border-color: inherit;
+    border-style: solid;
+}
+#discord .githlink {
+    box-shadow: 2.5px 2.5px #FFFFFF;
+}
+#pong .githlink {
+    box-shadow: 2.5px 2.5px #00FF40;
+}
+#musicapp .githlink {
+    box-shadow: 2.5px 2.5px #FEDA6A;
+}
+#exam .githlink {
+    box-shadow: 2.5px 2.5px #C9AF98;
 }
 .propic {
     height: 24vh;
@@ -106,16 +122,66 @@ body,html {
     border-radius: 10%;
 }
 #headbar {
+    list-style-type: none;
     padding: 0.5rem 0.5rem;
     display: flex;
     flex-direction: row;
     position: sticky;
+    position: -ms-sticky;
+    position: -moz-sticky;
+    position: -o-sticky;
     position: -webkit-sticky;
-    min-height: 5rem;
+    min-height: 8vh;
     top: 0;
-    z-index: 99;
+    z-index: 98;
     background: #3d9970;
     color:aliceblue;
+}
+#sideNav {
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    border: none;
+    font-size: 10rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    color: white;
+    background-color: inherit;
+}
+#navMenu {
+    display: flex;
+    flex-direction: column;
+    font-size: 8rem;
+    position: fixed;
+    width: 80rem;
+    left: -80rem;
+    top: 0rem;
+    height: 100%;
+    background-color: #296A4D;
+    z-index: 99;
+    transition: 0.5s;
+}
+#navMenu a {
+    display: block;
+    border-bottom: 0.1rem solid #1E4D38;
+    text-align: left;
+    text-decoration: none;
+    color: white;
+    background-color: inherit;
+    padding: 2rem;
+    margin: 3rem;
+}
+#navMenu #navExit { 
+    border: none;
+    font-size: 15rem;
+    padding: 0rem 5rem 0rem 5rem;
+    top: -2.5rem;
+    position: absolute;
+    left: 60rem;
+}
+#resumeNav, #contactNav {
+    height: 10rem;
 }
 #headLeft {
     flex: 1;
@@ -152,7 +218,7 @@ body,html {
 .title {
     text-align: center; 
     margin: 0rem; 
-    padding-top: 14vh; 
+    padding-top: 12vh; 
     font-size: 6vh;
 }
 .split {
@@ -170,30 +236,62 @@ body,html {
 }
 .preview {
     position: relative;
-    margin-top: -15rem;
+    margin-top: -75rem;
     display: flex;
     justify-content: center;
 }
 .descrip {
     display: flex;
     flex-direction: column;
+    border-color: inherit;
     margin-top: 2rem;
     position: relative;
 }
 .desctools {
     position: relative;
+    font-size: 6rem;
     margin-top: 0rem;
     text-align: center;  
 }
+.descBut {
+    position: absolute;
+    box-shadow: 2.5px 2.5px;
+    top: 9.6vh;
+    left: 10vw;
+    font-size: 10rem;
+    font-family: 'Raleway', 'sans serif';
+    width: 50%;
+    padding: 0rem;
+    border-style: solid;
+    border-color: inherit;
+    background-color: inherit;
+    color: inherit;
+}
+.descExit {
+    display: none;
+    position: absolute;
+    font-size: 20rem;
+    border: none;
+    left: 45vw;
+    bottom: -10vh;
+    color: inherit;
+    background-color: inherit;
+}
 .desctext {
-    font-size: 2vh;
+    display: none;
+    margin-top: 0rem;
+    font-size: 2.5vh;
+    padding-left: 2rem;
+    padding-right: 2rem;
     list-style-type: none;
     text-align: left;
+    transition: 0.5s ease-out;
 }
 .github {
     position: absolute;
-    bottom: 9.5rem;
-    left: 30.5rem;
+    border-color: inherit;
+    top: 9.6vh;
+    right: 10vw;
 }
 .nextButton, .backButton {
     position: absolute;
@@ -202,22 +300,23 @@ body,html {
     text-decoration: none;
     color: inherit;
     font: inherit;
+    font-size: 10rem;
     border-style: solid;
-    border-width: 0.1rem;
+    border-width: 1rem;
     border-color: inherit;
     outline: none;
-    right: 10rem;
-    bottom: 5rem;
-    padding: 0.5rem;
+    right: 16vw;
+    bottom: 16vh;
+    padding: 2rem;
 }
 .backButton {
-    right: 18rem;
+    right: 53vw;
 }
 .nextButton:after {
-    content: ' \00bb';
+    content: 'Next \00bb';
 }
 .backButton:before {
-    content: '\00ab  ';
+    content: '\00ab  Back';
 }
 #discord {
     background-color: #7289DA;
@@ -228,6 +327,7 @@ body,html {
     background-color: black;
     color: #00FF40;
     border-color: #00FF40;
+    box-shadow: 0px 0px #00FF40;
 }
 #musicapp {
     background-color: #393F4D;
@@ -244,7 +344,7 @@ body,html {
     position: relative;
     text-align: center;
     padding-top: 1rem;
-    height: 22.5rem;
+    height: 72vh;
     color: #EDF5E1;
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url("assets/background3.jpg");
     background-position-x: 50%;
@@ -252,6 +352,36 @@ body,html {
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
+}
+#contactHeader{
+    font-size: 15rem;
+}
+#contactSub {
+    font-size: 7.5rem; 
+    margin-top: -10rem; 
+    color: inherit;
+}
+#emailLink {
+    margin-top: -8rem;
+    text-decoration: none;
+    padding: 2rem;
+    border-radius: 2rem;
+    font-size: 10rem;
+    border: 1rem solid #EDF5E1;
+    background-color: #EDF5E1;
+    color: rgba(0,0,0,0.5);
+}
+#infoHead {
+    margin-top: 3rem;
+    font-size: 15rem;
+}
+#eAddress {
+    margin-top: -10rem;
+    font-size: 7.5rem;
+}
+#cellnum {
+    margin-top: -5rem;
+    font-size: 7.5rem;
 }
 input, #message {
     background: inherit;
@@ -276,26 +406,19 @@ input, #message {
 }
 #webinfo {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
-    margin-top: -0.5rem;
+    margin-top: -4rem;
     text-align: center;
     padding: 2rem;
-    font-size: 0.5rem;
-    height: 3.5vh;
+    font-size: 4rem;
+    height: 20vh;
     color: #9A9EAB;
     background-color: #5D535E;
 }
-#send {
-    font-family: 'Raleway', 'sans-serif';
-    font-size: 1.5vh;
-    padding: 1vh;
-    border: none;
-    outline: none;
-    border-radius: 10%;
-    color: #EDF5E1;
-    background-color: #379683;
+#domain, #githForSite {
+    color: inherit;
 }
 
 input:-webkit-autofill,
