--- a/mobile.css
+++ b/mobile.css
@@ -243,6 +243,7 @@ body,html {
 .descrip {
     display: flex;
     flex-direction: column;
+    align-items: center;
     border-color: inherit;
     margin-top: 2rem;
     position: relative;
@@ -281,6 +282,7 @@ body,html {
     display: none;
     margin-top: 0rem;
     font-size: 2.5vh;
+    width: 90vw;
     padding-left: 2rem;
     padding-right: 2rem;
     list-style-type: none;
