--- a/mobile.css
+++ b/mobile.css
@@ -1,4 +1,5 @@
 body,html {
+    overflow-x: hidden;
     font-size: 0.5vh;
     font-family: 'Raleway', sans-serif;
     margin: 0;
@@ -14,6 +15,7 @@ body,html {
 .banner {
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url("assets/attempt.jpg");
     height: 50vh;
+    width: 101vw;
     background-position-x: 50%;
     background-position-y: 60%;
     background-attachment: fixed;
@@ -24,7 +26,7 @@ body,html {
 .banner-text {
     text-align: center;
     position: absolute;
-    width: 75%;
+    width: 100%;
     font-size: 2vh;
     top: 50%;
     left: 50%;
@@ -58,7 +60,7 @@ body,html {
     margin-top: -1.5rem;
     background-color: #3D9970;
     height: 46vh;
-    width: 100%;
+    width: 100vw;
     border: none;
     padding-bottom: 3rem;
     z-index: 1;
@@ -126,16 +128,22 @@ body,html {
     padding: 0.5rem 0.5rem;
     display: flex;
     flex-direction: row;
-    position: sticky;
+    position: fixed;
     position: -ms-sticky;
     position: -moz-sticky;
     position: -o-sticky;
     position: -webkit-sticky;
     min-height: 8vh;
+    width: 100vw;
     top: 0;
     z-index: 98;
     background: #3d9970;
     color:aliceblue;
+}
+#mobileFill {
+    display: block;
+    width: 100vw;
+    height: 8vh;
 }
 #sideNav {
     user-select: none;
@@ -198,7 +206,7 @@ body,html {
 #icons {
     transform: scale(0);
     flex: 1; 
-    display: flex; 
+    display: none; 
     justify-content: center; 
     align-items: center; 
     opacity: 0;
@@ -340,6 +348,14 @@ body,html {
     background-color: #3A4660;
     color: #C9AF98;
     border-color: #C9AF98;
+}
+#projectgg {
+    background-color: #2C265A;
+    color: #EA6341;
+    border-color: #EA6341;
+}
+#ggbig {
+    width: 10vh;
 }
 #contact {
     margin-top: -1.25rem;
